refactor: Adição da rota favorites na documentação e validações no corpo das requisições
